# mailling

./: LICENSE  PrepareWorkspace.bat  README.md  Run.bat  Vector_Issue.code-workspace  Vector_Issue.spec  config.txt  config_backup.txt  document.bat  mock_issue.xml  openCmd.bat  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt  setup.py  setup_env.bat  test.xml
docs/source/: FirstSteps.rst  Installation.rst  Introduction.rst  Vector_Issue.rst  Vector_IssueCli.rst  conf.py  index.rst
docs/source/scripts/: Vector_IssueCmdMain.rst  Vector_IssueGuiMain.rst
schemas/: SmkInput.schema.json
src/Vector_Issue/: KnownBugsList_Template.xlsx  Rules.py  Test_KnownBugsList.py  Vector_Issue.py  __init__.py  __main__.py  _pythonLib_knownIssuesExcel.py  _pythonLib_vectorIssuesXml.py  config.json  genKnownBugsList.py  graph_access_certStore.py  jira1.py  make_config.py  sources.txt  utils.py
src/Vector_Issue/MQ/: __init__.py  dim_co.py  dim_rel.py  dm.py  knownIssuesExcel.py  knownIssuesExcel_old.py  knownIssuesExcel_test_new_status.py  test_none_values.xlsx  test_none_values_fixed.xlsx  vectorIssuesXml.py  vectorIssuesXml_old.py
src/Vector_Issue/Manual_script_for_init_deliveries/: genKnownBugsList.py  vectorIssuesXml.py
src/Vector_Issue/scripts/: Vector_IssueCmdMain.py  __init__.py  (+1 more)
test/: conftest.py  test_Jira.py  test_KnownIssuesExcel.py  test_Main.py  test_VectorIssues.py  test_VectorIssuesXml.py  test_genKnownBugsList.py  test_make_config.py  test_utils.py
test/MockFiles/: mock_issue.xml
tools/Python/: pip.ini
tools/Scripts/: check.py
